# Kosmos

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_BASED_BUGS.md  DEBUG_MODE_IMPLEMENTATION_PLAN.md  E2E_RESUME_PROMPT_18_PART2.md  E2E_RESUME_PROMPT_19.md  E2E_TESTING_PLAN.md  IMPLEMENTATION_PLAN.md  PROMPT_README_UPDATE.md  README.md  TESTS_STATUS.md  WEB_BASED_BUGS.md  coverage.xml  missing_tests.md  pyproject.toml  requirements-test.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: hn-rewrite.md
.claude/export/: README.md  WARM_START.md  install.sh
.claude/export/agents/: kosmos_architect.md
.claude/export/kosmos-xray/: CHEATSHEET.md  SKILL.md  reference.md
.claude/export/kosmos-xray/configs/: ignore_patterns.json  priority_modules.json
.claude/export/kosmos-xray/lib/: __init__.py  ast_utils.py  token_estimator.py
.claude/export/kosmos-xray/scripts/: dependency_graph.py  mapper.py  skeleton.py
.claude/export/kosmos-xray/templates/: skeleton_format.md  warm_start.md.template
.github/workflows/: ci.yml  release.yml
archive/: 120525_implementation_gaps_v2.md  120525_implementation_plan_v2.md  120625_code_review.md
data/benchmarks/: paper_accuracy_benchmark.json
docker/sandbox/: Dockerfile  docker-compose.yml  requirements.txt
docs/: CHECKPOINT_MOCK_MIGRATION.md  E2E_DIAGNOSTIC.md  E2E_TESTING_CODE_REVIEW.md  E2E_TESTING_IMPLEMENTATION_PLAN.md  ISSUE_SKILLLOADER_BROKEN.md  MIGRATION_MULTI_PROVIDER.md  PHASE_5_COMPLETION.md  PHASE_9_CHECKPOINT_2025-11-09_v10.md  PHASE_9_CHECKPOINT_2025-11-09_v8.md  RESUME_E2E_PHASE2.md  RESUME_MOCK_MIGRATION.md  examples.md  scientific-skills.md
docs/api/: llm.md
docs/planning/: CHECKPOINT_BUG_FIX_COMPLETE.md
docs/providers/: README.md
docs/releases/: MULTI_PROVIDER_RELEASE.md
kosmos/: config.py
kosmos/agents/: research_director.py  skill_loader.py
kosmos/cli/: main.py  utils.py
kosmos/cli/commands/: config.py  profile.py  run.py
kosmos/cli/views/: results_viewer.py
kosmos/compression/: compressor.py
kosmos/core/: async_llm.py  llm.py  logging.py
kosmos/core/providers/: openai.py
kosmos/execution/: __init__.py  code_generator.py  data_analysis.py  docker_manager.py  executor.py  jupyter_client.py  ml_experiments.py  package_resolver.py  production_executor.py  result_collector.py  sandbox.py  statistics.py
kosmos/knowledge/: embeddings.py  graph_builder.py  vector_db.py
kosmos/literature/: base_client.py  pubmed_client.py  semantic_scholar.py  unified_search.py
kosmos/models/: result.py
kosmos/orchestration/: delegation.py  novelty_detector.py  plan_creator.py
kosmos/safety/: reproducibility.py
kosmos/world_model/: artifacts.py
prompts/: RUNBOOK_GENERATION_PROMPT.md
scientific-skills/document-skills/docx/: SKILL.md
scientific-skills/document-skills/pdf/: SKILL.md
scientific-skills/document-skills/pptx/: SKILL.md
scientific-skills/document-skills/xlsx/: SKILL.md
scripts/: baseline_workflow.py  verify_production.sh
tests/: conftest.py
tests/e2e/: conftest.py  test_autonomous_research.py  test_full_research_workflow.py
tests/integration/: test_analysis_pipeline.py  test_compression_pipeline.py  test_execution_pipeline.py  test_orchestration_flow.py  test_parallel_execution.py  test_phase2_e2e.py  test_phase3_e2e.py  test_research_workflow.py  test_validation_pipeline.py
tests/integration/execution/: test_statistics_real_data.py
tests/manual/: test_basic_generation.py  test_ollama.py  test_provider_switching.py
tests/unit/agents/: test_skill_loader.py
tests/unit/compression/: test_compressor.py
tests/unit/domains/biology/: test_genomics.py
tests/unit/domains/materials/: test_ontology.py
tests/unit/domains/neuroscience/: test_neurodegeneration.py
tests/unit/execution/: test_code_generator.py  test_data_analysis.py  test_docker_manager.py  test_executor.py  test_ml_experiments.py  test_package_resolver.py  test_production_executor.py  test_result_collector.py  test_sandbox.py  test_statistics.py
tests/unit/orchestration/: test_delegation.py  test_novelty_detector.py  test_plan_creator.py  test_plan_reviewer.py
tests/unit/validation/: test_scholar_eval.py
tests/unit/workflow/: test_research_loop.py
tests/unit/world_model/: test_artifacts.py
